kubernetes/apps/monitoring/grafana/templates/network_policy.yaml
---
# yaml-language-server: $schema=https://deedee-ops.github.io/schemas/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: grafana
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: grafana
    egress:
      - toPorts:
          - ports:
              - port: "53"
                protocol: ANY
            rules:
              dns:
                - matchPattern: "*"
      - toFQDNs:
          - matchName: grafana.com
          - matchName: raw.githubusercontent.com
          - matchName: storage.googleapis.com
